# cinnamon-desktop

./: config.h.meson.in  meson.build  meson_options.txt
debian/: rules
files/: meson.build
libcinnamon-desktop/: cdesktop-enums.h  gnome-bg.c  gnome-bg.h  gnome-desktop-thumbnail.c  gnome-desktop-thumbnail.h  gnome-installer.c  gnome-installer.h  gnome-rr-config.c  gnome-rr-config.h  gnome-rr-output-info.c  gnome-rr-private.h  gnome-rr.c  gnome-rr.h  meson.build
libcvc/: meson.build
po/: meson.build
schemas/: meson.build  org.cinnamon.desktop.keybindings.media-keys.gschema.xml.in.in  org.cinnamon.desktop.keybindings.wm.gschema.xml.in.in  org.cinnamon.desktop.thumbnail-cache.gschema.xml.in.in  org.cinnamon.desktop.thumbnailers.gschema.xml.in.in
