

i18n.gettext('cinnamon-desktop',
# list of extra arguments to pass to xgettext when generating the pot file
#  args: ,
# (Added 0.36.0) list of directories to be set for GETTEXTDATADIRS env var (Requires gettext 0.19.8+), used for local its files
#  data_dirs: ,
# (Added 0.37.0) name of a preset list of arguments, current option is 'glib', see source for for their value
#  preset: ,
  install: true,
)

# This function also defines targets for maintainers to use: Note: These output to the source directory
# <project_id>-pot: runs xgettext to regenerate the pot file
# <project_id>-update-po: regenerates the .po files from current .pot file
# <project_id>-gmo: builds the translations without installing
